--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,12 @@ wasm-bindgen-test = "0.3.17"
 seed = { git = "https://github.com/seed-rs/seed", rev = "597effe" }
 serde = "1.0.115"
 
+[dependencies.web-sys]
+version = "0.3.44"
+features = [
+  "ScrollToOptions",
+]
+
 [profile.release]
 lto = true
 opt-level = 'z'
